# school-api-challenge

./: .coveragerc  .gitignore  .travis.yml  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
htmlcov/: index.html  manage_py.html  pyjobschallenge___init___py.html  pyjobschallenge_asgi_py.html  pyjobschallenge_core___init___py.html  pyjobschallenge_core_admin_py.html  pyjobschallenge_core_apps_py.html  pyjobschallenge_core_migrations_0001_initial_py.html  pyjobschallenge_core_migrations_0002_auto_20200802_2221_py.html  pyjobschallenge_core_migrations___init___py.html  pyjobschallenge_core_models_py.html  pyjobschallenge_core_serializers_py.html  pyjobschallenge_core_tests_conftest_py.html  pyjobschallenge_core_tests_py.html  pyjobschallenge_core_tests_test_anything_py.html  pyjobschallenge_core_tests_test_models_py.html  pyjobschallenge_core_tests_test_serializers_py.html  pyjobschallenge_core_tests_test_views_py.html  pyjobschallenge_core_urls_py.html  pyjobschallenge_core_views_py.html  pyjobschallenge_settings_py.html  pyjobschallenge_urls_py.html  pyjobschallenge_wsgi_py.html  status.json
pyjobschallenge/: .env  .env-docker  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
pyjobschallenge/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
pyjobschallenge/core/fixtures/: school_subjects.json
pyjobschallenge/core/migrations/: 0001_initial.py  0002_auto_20200802_2221.py
pyjobschallenge/core/tests/: conftest.py  test_models.py  (+2 more)
pyjobschallenge/staticfiles/: staticfiles.json
